--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">AndroidMaster</string>
+    <string name="app_name">Notas</string>
     <string name="hellow_world">Hellow World</string>
 </resources>
